--- a/ui/assets/index.css
+++ b/ui/assets/index.css
@@ -10,3 +10,32 @@
     margin-right: 20px;
     margin-left: 20px;
 }
+
+.tooltip_layout {
+  position: relative;
+  display:inline-block;
+}
+
+.tooltip_content.show {
+   opacity:1;
+   transition: 1s;
+   -webkit-transition: 0.2s;
+}
+
+.tooltip_content {
+    right:-55px;
+    top:-4px;
+    background: #616161;
+    border-radius: 2px;
+    -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    color: #fff;
+    display: inline-block;
+    font-size: 12px;
+    padding: 5px 8px;
+    position: absolute;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+    width: auto;
+    opacity:0;
+}
